# DOOCE

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  setup.py
.github/workflows/: CI.yml
frontend/: CMakeLists.txt
frontend/include/: frontend.h
frontend/src/: frontend.cpp
include/: array_vector.h  attack_bitboards.h  bitwise_ops.h  board.h  definitions.h  eval.h  fen.h  frontend.h  game.h  gameplay.h  gameplay_mt.h  gameplay_st.h  magics.h  mailbox.h  misc_tools.h  move.h  move_ordering.h  negamax.h  perft.h  timer.h  transposition_table.h  zobrist_hash.h
pieces/: Credits.txt
src/: attack_bitboards.cpp  bitboard.cpp  bitboard.h  bitwise_ops.h  board.cpp  board.h  definitions.h  eval.cpp  fen.cpp  frontend.cpp  game.cpp  game.h  gameplay.cpp  gameplay_mt.cpp  gameplay_st.cpp  magics.cpp  mailbox.cpp  mailbox.h  main.cpp  misc_tools.cpp  move.cpp  move.h  move_gen_helper.cpp  move_gen_helper.h  move_ordering.cpp  negamax.cpp  perft.cpp  setwise_ops.h  timer.cpp  transposition_table.cpp  zobrist_hash.cpp
src/dooce/: __init__.py
tests/: CMakeLists.txt  drawing_tests.cpp  gameplay_test.cpp  move_gen_test.cpp
